XMLtoCSV/objects/unpackaged/objects/Order_Line_vod__c.object
<CustomObject>
    <description>The Order Line Item is a child of Order. It holds information about a particular product and quantity ordered for an account or an account group</description>
    <fields>
        <fullName>Added_From_Pack_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flags the order line when part or all of the product quantity was added from one or multiple bundle pack</description>
        <label>Added From Pack?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_Best_Price_Rule_vod__c</fullName>
        <description>Shows and stores the pricing cluster that triggered Best Price discount at the brand level</description>
        <label>Brand Best Rule</label>
        <picklist>
            <picklistValues>
                <fullName>Campaign_with_Contract_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order_Campaign_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combined_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brand_Discount_Rule_vod__c</fullName>
        <description>Shows and stores the exact amount of added rule discounts of all levels, not editable by users</description>
        <label>Brand Discount Rule</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Brand_Discount_vod__c</fullName>
        <description>Shows and stores the brand level discount override entered by the user.</description>
        <label>Brand Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Brand_Warning_vod__c</fullName>
        <description>Stores any warnings on respective Level, generated by SKU, Brand and Product Group Level Rules</description>
        <label>Brand Warning</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Quantity_vod__c</fullName>
        <description>Quantity to be delivered.</description>
        <formula>Free_Goods_vod__c + Quantity_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Calculation_Path_vod__c</fullName>
        <description>Determines the discount calculation path on orders.</description>
        <label>Discount Calculation Path</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Net_Price_Rule_vod__c</fullName>
        <description>Shows and stores the final net price the pricing rules have determined, not editable by users.</description>
        <label>Final Net Price Rule</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Net_Price_vod__c</fullName>
        <description>Shows and stores the final net price determined by the pricing rules and user discount overrides.</description>
        <label>Final Net Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Free_Good_Best_Price_Rule_vod__c</fullName>
        <description>Shows and stores the pricing cluster that triggered Best Price discount for free goods.</description>
        <label>Free Good Best Rule</label>
        <picklist>
            <picklistValues>
                <fullName>Campaign_with_Contract_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order_Campaign_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combined_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Free_Goods_Rule_vod__c</fullName>
        <description>Shows and stores the exact amount of free goods the pricing rule has determined, not editable by users</description>
        <label>Free Goods Rule</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Free_Goods_vod__c</fullName>
        <description>Allow reps to enter data into this fields (change suggested values); limits of Free_Goods_Max_vod__c would apply</description>
        <label>Free Goods</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Discount_Rule_vod__c</fullName>
        <description>Shows and stores the exact amount of discount the pricing rule for this product group has determined, not editable by users</description>
        <label>Group Discount Rule</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Group_Discount_vod__c</fullName>
        <description>Shows and stores the group level discount override entered by the user.</description>
        <label>Group Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Group_Warning_vod__c</fullName>
        <description>Stores any warnings on group Level</description>
        <label>Group Warning</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Best_Price_Rule_vod__c</fullName>
        <description>Shows and stores the pricing cluster that triggered Best Price discount at the line level</description>
        <label>Line Best Rule</label>
        <picklist>
            <picklistValues>
                <fullName>Campaign_with_Contract_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order_Campaign_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combined_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Line_Discount_Rule_vod__c</fullName>
        <description>Shows and stores the exact amount of discount the pricing rule for this order line has determined, not editable by users</description>
        <label>Line Discount Rule</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Line_Discount_vod__c</fullName>
        <description>Shows and stores the exact amount of discount the pricing rule for this order line has determined, the customer can decide if he wants to</description>
        <label>Line Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Line_Warning_vod__c</fullName>
        <description>Stores any warnings on lineLevel</description>
        <label>Line Warning</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Amount_vod__c</fullName>
        <description>The list price of the product being ordered</description>
        <label>List Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>List_Price_Rule_vod__c</fullName>
        <description>Shows and stores the list price the pricing rule has determined, not editable by users</description>
        <label>List Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Field used by mobile products for synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Net_Amount_Rule_vod__c</fullName>
        <description>Shows and stores the line&apos;s Net Amount value as calculated from discount rules (ie. user manual overrides are not included).</description>
        <label>Net Amount Rule</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Amount_vod__c</fullName>
        <description>The net price of the product being ordered.</description>
        <label>Net Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Price_Rule_vod__c</fullName>
        <description>Shows and stores the list price the pricing rule has determined, not editable by users</description>
        <label>Net Price Rule</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Price_vod__c</fullName>
        <description>Shows and stores the net price the pricing rule has determined, the customer can decide if he wants to</description>
        <label>Net Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Discount_Rule_vod__c</fullName>
        <description>Shows and stores the exact amount of discount the pricing rule for this order has determined, not editable by users</description>
        <label>Order Discount Rule</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Order_Discount_vod__c</fullName>
        <description>Shows and stores the order level discount entered by users.</description>
        <label>Order Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Order_vod__c</fullName>
        <description>The order that the line item belongs to.</description>
        <label>Order</label>
        <referenceTo>Order_vod__c</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This allows a non-Admin User to make changes to a Submitted Order and/or Order Lines without requiring the User to unlock the Order. This is only intended for integration and/or custom pages/coding i.e. not through our Order User Interface.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Brand_Rule_vod__c</fullName>
        <description>Shows and stores the exact value the Payment Term rule has determined at the Brand level, not editable by users.</description>
        <label>Payment Brand Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Brand_vod__c</fullName>
        <description>Field for allowing the rep to override Order Line Payment terms at the Brand level.</description>
        <label>Payment Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Group_Rule_vod__c</fullName>
        <description>Shows and stores the exact value the Payment Term rule has determined for the Product Group, not editable by users.</description>
        <label>Payment Group Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Group_vod__c</fullName>
        <description>Field for allowing the rep to override Order Line Payment terms at the Product Group level.</description>
        <label>Payment Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Rule_vod__c</fullName>
        <description>Shows and stores the exact value the Payment Term rule has determined at the Order Line level, not editable by users.</description>
        <label>Payment Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_vod__c</fullName>
        <description>Field for allowing the rep to override Order Line Payment terms at the Order Line level.</description>
        <label>Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the product group (Product Catalog object) that this Order Line was created under.</description>
        <label>Product Group</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Order Lines (Product Group)</relationshipLabel>
        <relationshipName>Order_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Identifier_vod__c</fullName>
        <description>This is a pull-in field that allows the display of the Product Identifier field from the Product Catalog object on Order Lines.</description>
        <label>Product Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the product catalog - this is the product being ordered.</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profit_vod__c</fullName>
        <description>Calculates profit (difference between product net cost and Suggested Retail Price)</description>
        <label>Profit</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity_vod__c</fullName>
        <description>The number of items being ordered in this line item.</description>
        <label>Quantity</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rule_vod__c</fullName>
        <description>The pricing rule that was used to determine the price of this line item. Copied over from Pricing_Rule_vod.</description>
        <label>Rule</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Suggested_Retail_Price_Rule_vod__c</fullName>
        <description>Shows and stores the Suggested Retail Price value determined by the Price Rule, not editable by user</description>
        <label>Suggested Retail Price Rule</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Suggested_Retail_Price_vod__c</fullName>
        <description>Stores the user override on the Suggested Retail Price field</description>
        <label>Suggested Retail Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Discount_Rule_vod__c</fullName>
        <description>Shows and stores the exact amount of added discounts of all levels (incl. user changes to the line discount), not editable by users</description>
        <label>Total Discount Rule</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Discount_vod__c</fullName>
        <description>Shows and stores the exact amount of added discounts of all levels (incl. user changes to the line discount), not editable by users</description>
        <label>Total Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Payment_Rule_vod__c</fullName>
        <description>Documents the final payment value to be applied at the line level according to Payment rule hierarchies.</description>
        <label>Total Payment Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Payment_vod__c</fullName>
        <description>Documents the final payment value to be applied at the line level according to Payment rule hierarchies and user overrides.</description>
        <label>Total Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>U_M_vod__c</fullName>
        <description>Unit of Measurement for the line item being ordered.</description>
        <label>Unit of Measure</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zvod_Product_Grouping_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that drives the UI change in the way Product Groups are being displayed. When placed on the Order Line page layout, it will group the products per Product Group.</description>
        <label>zvod_Product_Grouping_vod</label>
        <type>Checkbox</type>
    </fields>
    <label>Order Line</label>
    <nameField>
        <displayFormat>OL{000000000}</displayFormat>
        <label>Order Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>